# sales-closer-env

./: README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  environment.py  grader.py  prospect_engine.py  requirements.txt  state_tracker.py
tasks/: __init__.py  scenarios.py
